--- a/priorities.html
+++ b/priorities.html
@@ -119,8 +119,12 @@
 // Trying to create a delete button
 function deletePriority(name) {
   var priority = priorities.find(p => p.name === name);
-  
-    priority.splice();
+  console.log(priority);
+  var mistake = document.getElementById('prior');
+    mistake.parentNode.removeChild(mistake);
+    $(priorities).remove(priority);
+
+    drawPriorities();
     }
 
     drawPriorities()
@@ -161,13 +165,13 @@ function deletePriority(name) {
   // var newArray = mapPractice.map(callback)
   // console.log(newArray)
 
-  var filterPractice = [{name: "zach"} , {name: "bob"}, {name: "susan"}]
-    function callback(e) {
-      console.log(e)
-      return e.name !== "bob"
-    }
-    var newArray = filterPractice.filter(callback)
-    console.log(newArray)
+  // var filterPractice = [{name: "zach"} , {name: "bob"}, {name: "susan"}]
+  //   function callback(e) {
+  //     console.log(e)
+  //     return e.name !== "bob"
+  //   }
+  //   var newArray = filterPractice.filter(callback)
+  //   console.log(newArray)
   </script>
 </body>
 </html>
